--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale.=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
 
-
+    <link rel="stylesheet" href="animations.css">
 </head>
 
 <body>
@@ -17,13 +17,14 @@
     <div class="catelog">
         <ul class="head-ings">
             <li class="cate-list">
-                <h3>Features</h3>
+                
+                <a href = "#">    <h3>Features</h3></a>
             </li>
             <li class="cate-list">
-                <h3>Home</h3>
+                <a href = "#"><h3>Home</h3></a>
             </li>
             <li class="cate-list">
-                <h3>Contacts</h3>
+                <a href = "#"><h3>Contacts</h3></a>
             </li>
         </ul>
     </div>
@@ -59,6 +60,7 @@
                 <div class="line1"></div>
             </div>
 
+          
 
 
         </div>
