--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 
                 <div class="center-items">
                     <h3>
-                        <a href="#" class="grey">Home</a>
-                        <a href="#" class=grey>Features</a>
-                        <a href="#" class="grey">Contacts</a>
+                        <a href="#" class="grey effect">Home</a>
+                        <a href="#" class="grey effect">Features</a>
+                        <a href="#" class="grey effect">Contacts</a>
                         </h3>
                 </div>
                 <div class="auth-items">
@@ -314,9 +314,11 @@
                         <p class="mid-weight">Make more sales by giving customers ability to pay the way they love it
                         </p>
                     </div>
+                    <a class="none" href="#">
                     <div class="start-button sans">
-                        <a class="none" href="#">Get Started</a>
+                        Get Started
                     </div>
+                </a>
                     <div class="spacing">
 
                     </div>
