--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <header>
         
         <div class="all-items">
-            <div class="logo">
+            <div class="downeffect logo">
                 <img class="icon" src="https://i.postimg.cc/0NcHqT0B/orange-theory-seeklogo-com.png">
                 <h2>bPay</h2>
             </div>
@@ -41,15 +41,17 @@
 
                 <div class="center-items">
                     <h3>
+                        <div class="downeffect">
                         <a href="#" class="grey effect">Home</a>
-                        <a href="#" class="grey effect">Features</a>
-                        <a href="#" class="grey effect">Contacts</a>
-                        </h3>
+                        <a href="#" class="downeffect grey effect">Features</a>
+                        <a href="#" class="downeffect grey effect">Contacts</a>
+                    </div>    
+                    </h3>
                 </div>
-                <div class="auth-items">
+                <div class="downeffect auth-items">
                     <h3>
-                        <a href="#" class="green">Register</a>
-                        <a href="#" class="white">Sign in</a>
+                        <a href="#" class="downeffect green">Register</a>
+                        <a href="#" class="downeffect white">Sign in</a>
                 </h3>
                     </div>
 
@@ -66,7 +68,8 @@
         </div>
 
     </header>
-    <main>
+   
+        <section>
         <div class="card1">
 
             <div class="another-box">
@@ -81,16 +84,16 @@
                 </div>
             </div>
             <div class="main-card">
-                <div class="small-right"></div>
+                <div class="small-right scaledown"></div>
                 <div class="card">
                     <div class="left">
                         <div class="main-heading">
-                            <h4 class="colour spacing-letter">START SAVING YOUR MONEY</h4>
-                            <h1 class="space">Online payments for <span class="everyone">everyone</span></h1>
-                            <h3 class="space">Make more sales by giving customers ability to pay he way they love it
+                            <h4 class="designstart colour spacing-letter">START SAVING YOUR MONEY</h4>
+                            <h1 class="designstart space">Online payments for <span class="everyone">everyone</span></h1>
+                            <h3 class="designstart space">Make more sales by giving customers ability to pay he way they love it
                             </h3>
                         </div>
-                        <div class="links">
+                        <div class="designstart links">
                             <a href="#">
                                 <h3 class="green-button sans size1">Get Started</h3>
                             </a>
@@ -115,7 +118,7 @@
                     </div>
 
                     <div class="right">
-                        <div class="less-right">
+                        <div class="scaling less-right">
                         </div>
                         <div class="small-box">
                             <div class="head">
@@ -129,19 +132,19 @@
                             <h7 class="money">operation successful</h7>
                         </div>
                         <div class="credit-card">
-                            <div class="main">
+                            <div class="designcredit main">
                                 <img class="code" src="https://i.postimg.cc/ryNnMbGc/chip-icon-64.png">
                                 <h1>VISA</h1>
                             </div>
-                            <div class="number">
+                            <div class="designcredit number">
                                 <h2>5256 6773 4446 1156</h2>
                             </div>
                             <div class="info">
-                                <div class="holder">
+                                <div class="designcredit holder">
                                     <h4 class="spacing-letter">CARD HOLDER</h4>
                                     <h2>Bhanu Partap</h2>
                                 </div>
-                                <div class="expiry">
+                                <div class="designcredit expiry">
                                     <h4 class="spacing-letter">EXPIRY</h4>
                                     <h2>12/25</h2>
                                 </div>
@@ -151,7 +154,8 @@
                 </div>
             </div>
         </div>
-
+        </section>
+<main>
         <div class="simple-container">
             <div class="simple-inner">
                 <div class="upper">
