--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
 </head>
 
 <body>
-
+    <div class="colored1"></div>
+    <div class="colored2"></div>
+    <div class="colored3"></div>
+    <div class="colored4"></div>
+    <div class="colored5"></div>
+    <div class="colored6"></div>
     <div class="catelog">
         <ul class="head-ings">
             <li class="cate-list">
