intersection observer api

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
     </header>
    
-        <section>
+        <section class="toppers">
         <div class="card1">
 
             <div class="another-box">
@@ -161,9 +161,10 @@
         </div>
         </section>
 <main>
+    <section class="middlers">
         <div class="simple-container">
             <div class="simple-inner">
-                <div class="upper">
+                <div class="upper removing">
                     <h4 class="grey spacing-letter">CLIENTS</h4>
                     <h2 class="mid-size mid-weight">Our trusted clients</h2>
                 </div>
@@ -198,6 +199,8 @@
         <div>
 
         </div>
+    </section>
+        <section class="chilling">
         <div class="telling-card">
             <div class="full-circle">
 
@@ -265,6 +268,7 @@
                 </div>
             </div>
         </div>
+    </section>
         <div class="pad-container">
             <div class="simpler-container">
                 <div class="profile-container">
@@ -316,10 +320,10 @@
         <div class="simple-container">
             <div class="simple-inner">
                 <div class="content">
-                    <div class="titling">
+                    <div class="titling1">
                         <h2 class="mid-size mid-weight">Start today with our free payment solution</h2>
                     </div>
-                    <div class="dsc">
+                    <div class="dsc1">
                         <p class="mid-weight">Make more sales by giving customers ability to pay the way they love it
                         </p>
                     </div>
